--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expressts",
+  "name": "fimmly-api",
   "version": "1.0.0",
   "description": "",
   "main": "dist/server.js",
@@ -12,14 +12,24 @@
   "author": "anjana784",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.3.2",
+    "nodemailer": "^6.9.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.4.8",
     "nodemon": "^3.0.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.17",
+    "jest": "^29.6.2",
+    "@types/jest": "^29.5.3",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^20.4.1",
+    "@types/nodemailer": "^6.4.8"
   }
 }
