--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
-    "compilerOptions": {
-      "module": "NodeNext",
-      "moduleResolution": "NodeNext",
-      "baseUrl": "src",
-      "target": "ES2020",
-      "sourceMap": true,
-      "outDir": "dist",
-      "noImplicitAny": true
-    },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules", "dist"]
+  "compilerOptions": {
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "baseUrl": "src",
+    "target": "ES2020",
+    "sourceMap": true,
+    "outDir": "dist",
+    "noImplicitAny": true
+  },
+  "include": ["src/**/*", "src/custom.d.ts"],
+  "files": ["src/custom.d.ts"],
+  "exclude": ["node_modules", "dist"]
 }
